# aeron-rs

./: .gitignore  Cargo.toml  README.md  check.sh  install-sbe-schema.sh  pre-push.sh
.github/workflows/: main.yml  rust.yml
aeron-archiver-codecs-build/: Cargo.toml  build.rs
aeron-archiver-codecs-build/schema/: messages.xml
aeron-archiver-messages/: .gitignore  Cargo.toml  README.md  build.rs  generate_sbe_codecs.sh
aeron-archiver-messages/src/: lib.rs
aeron-error-stat/: Cargo.toml
aeron-error-stat/src/: main.rs
aeron-loss-stat/: Cargo.toml
aeron-loss-stat/src/: main.rs
aeron-rs/: .gitignore  Cargo.toml
aeron-rs/examples/: basic_publisher.rs  basic_subscriber.rs  ping.rs  throughput.rs
aeron-rs/src/: aeron.rs  buffer_builder.rs  channel_uri.rs  client_conductor.rs  context.rs  counter.rs  exclusive_publication.rs  image.rs  lib.rs  primitives.rs  publication.rs  security.rs
aeron-rs/src/agrona/: mod.rs  semantic_version.rs
aeron-rs/src/archiver/: archive.rs  archive_proxy.rs  configuration.rs  mod.rs  recording_signal_consumer.rs
aeron-rs/src/concurrent/: agent_runner.rs  atomic_buffer.rs  counters.rs  ring_buffer.rs  strategies.rs
aeron-rs/src/concurrent/broadcast/: broadcast_receiver.rs  broadcast_transmitter.rs  copy_broadcast_receiver.rs
aeron-rs/src/concurrent/status/: status_indicator_reader.rs
aeron-rs/src/utils/: log_buffers.rs  memory_mapped_file.rs  misc.rs  mod.rs  time.rs
aeron-rs/tests/: common.rs  counters.rs  publish_subscribe.rs
aeron-stat/: Cargo.toml
aeron-stat/src/: main.rs
aeron_archiver_codecs/: Cargo.toml  README.md
aeron_archiver_codecs/src/: attach_segments_request_codec.rs  auth_connect_request_codec.rs  boolean_type.rs  bounded_replay_request_codec.rs  challenge_response_codec.rs  connect_request_codec.rs  control_response_codec.rs  detach_segments_request_codec.rs  extend_recording_request_2_codec.rs  extend_recording_request_codec.rs  find_last_matching_recording_request_codec.rs  keep_alive_request_codec.rs  lib.rs  list_recording_request_codec.rs  list_recordings_for_uri_request_codec.rs  list_recordings_request_codec.rs  message_header_codec.rs  migrate_segments_request_codec.rs  purge_segments_request_codec.rs  recording_descriptor_codec.rs  recording_descriptor_header_codec.rs  recording_position_request_codec.rs  recording_progress_codec.rs  recording_signal.rs  recording_signal_event_codec.rs  recording_started_codec.rs  replicate_request_codec.rs  start_position_request_codec.rs  start_recording_request_2_codec.rs  start_recording_request_codec.rs  stop_position_request_codec.rs  stop_recording_by_identity_request_codec.rs  stop_recording_request_codec.rs  stop_replication_request_codec.rs  tagged_replicate_request_codec.rs  truncate_recording_request_codec.rs  var_ascii_encoding_codec.rs  var_data_encoding_codec.rs
agrona/: Cargo.toml
agrona/src/: error.rs  lib.rs  semantiv_version.rs
src/: aeron.rs  client_conductor.rs  context.rs  driver_proxy.rs  exclusive_publication.rs  lib.rs  publication.rs
src/glommio/: context.rs  mod.rs
src/glommio/concurrent/: mod.rs
