[workspace]
members = [ "aeron-archiver-codecs-build", "aeron-error-stat", "aeron-loss-stat","aeron-rs", "aeron-stat" ]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0"
rand = "0.8"
ctrlc = "3.4"
log = "0.4"
pretty_env_logger = "0.5"
galvanic-assert = "0.8"
chrono = "0.4"
tempfile = "3.10"
hdrhistogram = "7.5"
clap = { version = "4.5", features = ["derive"] }
ntest = "0.9"

[workspace.lints.rust]
missing_docs = "allow"
# missing_docs = "deny"

[workspace.lints.clippy]
arc_with_non_send_sync = "allow"