[workspace]
members = [ "aeron-archiver-codecs-build", "aeron-error-stat", "aeron-loss-stat","aeron-rs", "aeron-stat" ]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.63"
rand = "0.8.5"
ctrlc = "3.4.5"
log = "0.4.22"
pretty_env_logger = "0.5.0"
galvanic-assert = "0.8.7"
chrono = "0.4.38"
tempfile = "3.12.0"
hdrhistogram = "7.5.4"
clap = { version = "4.5.17", features = ["derive"] }
ntest = "0.9.3"

[workspace.lints.rust]
missing_docs = "allow"
# missing_docs = "deny"

[workspace.lints.clippy]
arc_with_non_send_sync = "allow"