[package]
name = "aeron"
version = "0.2.0"
authors = [
    "Denis Komissarov",
    "Kirill Karbushev>",
    "Alexander Ostrovskiy",
    "Rafal Piotrowski"
]
license = "Apache-2.0"
description = "Aeron client library - fast messaging over UDP on Rust"
readme = "README.md"
repository = "https://github.com/rafalpiotrowski/aeron-rs"
edition = "2021"
keywords = [ "aeron", "sbe", "messaging", "HFT", "finance" ]
categories = [ "finance", "network-programming" ]

[badges]
maintenance = { status = "actively-developed" }

[lints]
workspace = true

[features]
default = [ "all" ]
all = [ "archiver", "cluster" ]
archiver = []
cluster = []

[dependencies]
# workspace wide dependencies
thiserror = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
pretty_env_logger = { workspace = true }
chrono = { workspace = true }
galvanic-assert = { workspace = true }
aeron_archiver_codecs = { path = "../aeron_archiver_codecs" }
ctrlc = { workspace = true }
memoffset = "0.9"
num-traits = "0.2"
lazy_static = "1.4"
memmap = "0.7"
nix = { version = "0.29", features = ['fs'] }
core_affinity = "0.8.1"
cache_line_size = "1.0.0"

# crate specific dependencies

[dev-dependencies]
tempfile = { workspace = true }
hdrhistogram = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ntest = { workspace = true }

[build-dependencies]
rustc_version = "0.4"
