[package]
name = "aeron_archiver_codecs"
version = "0.1.0"
authors = ["sbetool"]
description = "Message Codecs for communicating with an Aeron Archive."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rafalpiotrowski/aeron-rs"
keywords = [ "aeron", "sbe", "messaging", "HFT", "finance" ]
categories = [ "network-programming", ]

[lib]
name = "aeron_archiver_codecs"
path = "src/lib.rs"
